--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "googleapis": "^171.4.0",
     "lucide-react": "^0.574.0",
     "next": "14.2.35",
     "react": "^18",
